src/Javafe/trunk/Javafe/test/javafe/test/fe/test18/Interface.java
interface I extends I {}	// error

